FindBug errors